--- a/config/nyaovim/nyaovimrc.html
+++ b/config/nyaovim/nyaovimrc.html
@@ -14,7 +14,12 @@
     </style>
 
     <!-- Component tags here -->
-    <neovim-editor id="nyaovim-editor" argv$="[[argv]]" font="monospace"></neovim-editor>
+    <neovim-editor
+      id="nyaovim-editor"
+      argv$="[[argv]]"
+      font-size="15"
+      font="Liberation Mono,monospace"
+    ></neovim-editor>
     <markdown-preview editor="[[editor]]"></markdown-preview>
   </template>
 </dom-module>
